# Gully

./: .gitignore  LICENSE  gully.py  pyproject.toml  readme.md
gully/: __init__.py  data_stream.py
pipes/: __init__.py  pipe.py
tests/: test_gully.py  test_pipes.py  test_views.py
