[tool.poetry]
name = "pipes"
version = "0.1.0"
description = "Simple real time data stream manipulation."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ZechCodes/Bevy"
repository = "https://github.com/ZechCodes/pipes"
documentation = "https://github.com/ZechCodes/pipes/blob/main/readme.md"
keywords = ["data", "stream", "realtime", "framework", "events"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "TOPIC :: SOFTWARE DEVELOPMENT :: LIBRARIES :: APPLICATION FRAMEWORKS",
    "INTENDED AUDIENCE :: DEVELOPERS",
    "PROGRAMMING LANGUAGE :: PYTHON :: 3.7",
    "PROGRAMMING LANGUAGE :: PYTHON :: 3.8",
    "PROGRAMMING LANGUAGE :: PYTHON :: 3.9"
]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
