[tool.poetry]
name = "gully"
version = "0.2.1"
description = "Simple real time data stream manipulation."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ZechCodes/gully"
repository = "https://github.com/ZechCodes/gully"
documentation = "https://github.com/ZechCodes/gully/blob/main/readme.md"
keywords = ["data", "stream", "realtime", "framework", "events"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
